--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
 
+    permissions:
+      id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -40,6 +43,6 @@ jobs:
       - name: Build dist
         run: hatch build
 
-      - name: Publish on PyPI
+      - name: Publish package distributions to PyPI
         if: github.ref == 'refs/heads/main'
-        run: hatch publish
+        uses: pypa/gh-action-pypi-publish@release/v1
