--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,13 +7,14 @@ on:
     branches: ["main"]
 
 jobs:
-  build-and-publish:
+  build-and-release:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
 
+    environment: release
     permissions:
       id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
 
